# 2048.cpp

./: .appveyor.yml  .clang-format  .gitignore  .replit  .travis.yml  2048  2048.cpp  2048.h  CMakeLists.txt  LICENSE  Makefile  README.md  README_KOR.md  color.h  color.hpp  game.cpp  game.h  game.hpp  global.cpp  global.h  global.hpp  menu.cpp  menu.h  menu.hpp  meson.build  scores.cpp  scores.h  scores.hpp  setup.cmake  statistics.cpp  statistics.h  statistics.hpp
.github/workflows/: ci.yml
archive/: ai.hpp
data/: scores.txt  statistics.txt
src/: 2048.cpp  CMakeLists.txt  game-graphics.cpp  game-input.cpp  game-pregamemenu.cpp  game.cpp  gameboard-graphics.cpp  gameboard.cpp  global.cpp  loadresource.cpp  menu-graphics.cpp  menu.cpp  meson.build  saveresource.cpp  scores-graphics.cpp  scores.cpp  statistics-graphics.cpp  statistics.cpp  themes.cpp  tile-graphics.cpp  tile.cpp
src/headers/: 2048.hpp  color.hpp  game-graphics.hpp  game-input.hpp  game-pregamemenu.hpp  game.hpp  gameboard-graphics.hpp  gameboard.hpp  global.hpp  loadresource.hpp  menu-graphics.hpp  menu.hpp  point2d.hpp  saveresource.hpp  scores-graphics.hpp  scores.hpp  statistics-graphics.hpp  statistics.hpp  themes.hpp  tile-graphics.hpp  tile.hpp
